syntax = "proto3";

package chat_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

option go_package = "/Users/sasha137/code/go-GRPC-2/chat/api/chat_v1";

service ChatV1 {
    rpc writeMessage(WriteRequest) returns (google.protobuf.Empty){
        option (google.api.http) = {
          post: "/message/create"
          body: "*"
        };
      };
    rpc getMessagesFromChat(GetMessagesRequest) returns (GetMessagesResponse);
    rpc createChat(CreateChatRequest) returns (google.protobuf.Empty);
    rpc getChat(GetChatRequest) returns (GetChatResponse);
    rpc addUsersToChat(AddUsersToChatRequest) returns (google.protobuf.Empty);
    rpc getMessage(GetMessageRequest) returns (GetMessageResponse);
}

message GetMessageRequest {
    int32 MessageId = 1;
}

message GetMessageResponse {
    int32 ChatId = 1;
    int32 UserId = 2;
    string Text = 3;
    google.protobuf.Timestamp Time = 4;
}

message GetChatRequest {
    int32 ChatId = 1;
}

message GetChatResponse {
    int32 ChatId = 1;
    string Name = 2;
}

message WriteRequest {
    int32 UserId = 1;
    int32 ChatId = 2;
    string Message = 3;
    google.protobuf.Timestamp Time = 4;
}

message GetMessagesRequest {
    int32 ChatId = 1;
}

message GetMessagesResponse {
    repeated Message Messages = 1;
}

message Message {
    int32 MessageId = 1;
    int32 UserId = 2;
    string Text = 3;
    google.protobuf.Timestamp Time = 4;
}

message CreateChatRequest {
    string Name = 1;
    repeated int32 UserIds = 2;
}

message AddUsersToChatRequest {
    int32 ChatId = 1;
    repeated int32 UserIds = 2;
}